# tiny_hack

./: .gitignore  .gitmodules  LICENSE  README.md  README_upstream.md  build.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
07-trash-bin-collector/: LICENSE
10-ShroomCognition/: .gitmodules
11-MuseINO/: blueprint.md
3-beezza-ants/: README.md  main.py
4-cinecla-daniel-manfredi-francesco/: README.md  aio.sh  focoos.sh  ideas.md  macos_setup.sh  quantize.py  tv.py
backend/: package.json  server.mjs
docs/: README.md  additional.md  (+3 more)
submissions/3-beezza-ants/: .gitmodules  LICENSE  README.md  pyproject.toml
submissions/3-beezza-ants/arduino/: arduino.ino  arduino_build.sh
submissions/3-beezza-ants/docs/: beezzaants-howto-deploy.md  beezzaants-system-architecture.md
submissions/3-beezza-ants/models/pizza_crust/: model_info.json
submissions/4-cinecla/: README.md  context.md  pyproject.toml  simulate_viewing_session.py
submissions/4-cinecla/backend/: app.py
submissions/4-cinecla/backend/api/: jobs.py
submissions/4-cinecla/frontend/src/components/: EmotionReplay.tsx  VideoPlayer.tsx
submissions/4-cinecla/frontend/src/css/: CinemaView.module.css  EmotionHeatmap.module.css  FrameDisplays.module.css  SetupPage.module.css  TopMoments.module.css
submissions/4-cinecla/frontend/src/pages/: DashboardPage.tsx  SetupPage.tsx
submissions/4-cinecla/frontend/src/types/: index.ts
submissions/4-cinecla/src/: model_info.json
submissions/4-cinecla/tests/: simulate_viewing_session.py  test_impressions.sh  test_impressions_with_frame.sh
(+154 files in other folders)
