[project]
name = "beezzaants"
version = "0.1.0"
description = "An open-source swarm of buzzing bots and crawling code, powered by pizza, FocoosAI, Z-Ant, and Arduinos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.2",
    "nicegui>=3.0.2",
    "requests>=2.32.5",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.0",
    "onnxsim>=0.4.36",
]
